fixed z-index orders

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,8 @@ table {
   border-radius: 3px;
   width:90%;
   position: absolute;
-  z-index: 1000;
+  z-index: 999;
+  display: inline-block;
   /* -webkit-box-shadow: 1px 1px 2px 1px rgba(221, 221, 221, 0.7); */
   /* -moz-box-shadow: 1px 1px 2px 1px rgba(221, 221, 221, 0.7); */
   /* box-shadow: 1px 1px 2px 1px rgba(221, 221, 221, 0.7); */
@@ -142,6 +143,10 @@ span {
   z-index: 0;
 }
 
+#layout, #otherLayout {
+	font-weight:bold;
+}
+
 #cy, #spinner {
   position: absolute;
   width: 81.0%; 
@@ -157,13 +162,11 @@ span {
 }
 
 #cyLeft {
-  z-index:-999;  
   position: absolute;
   width: 90%; 
   height: 90%;
   margin: 0.0% 0.0% 0.0% 3%;
   overflow: hidden;
-  /* z-index: 20; */
 }
 
 #spinnerLeft {
@@ -179,7 +182,6 @@ span {
   width: 90%;
   height: 90%;
   margin: 0.0% 0.0% 0.0% 3%;
-  z-index: -999;
 }
 
 .layout-input {
@@ -192,7 +194,6 @@ span {
 }
 
 #cy{
-  z-index: 0;
   border-left: 2px solid #0d47a1;
 }
 
@@ -276,6 +277,7 @@ span {
 
 .cy-panzoom {
 	margin-top: 5%;
+	z-index: 1;
 }
 #cy .cy-panzoom {
 	margin-top: 0%;
